--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chatbox",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,34 +9,34 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/imlolman/whatsapp-bottom-button.git"
+    "url": "git+https://github.com/asaddon/WhatsApp.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Asaddon",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/imlolman/whatsapp-bottom-button/issues"
+    "url": "https://github.com/asaddon/WhatsApp/issues"
   },
-  "homepage": "https://github.com/imlolman/whatsapp-bottom-button#readme",
+  "homepage": "https://github.com/asaddon/WhatsApp#readme",
   "dependencies": {
-    "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.21.0",
-    "@babel/plugin-transform-react-jsx": "^7.21.0",
-    "@babel/preset-env": "^7.20.2",
-    "babel-loader": "^9.1.2",
-    "postcss-preset-env": "^8.0.1",
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
+    "babel-loader": "^9.2.1",
+    "postcss-preset-env": "^10.1.1",
     "svg-inline-loader": "^0.8.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "css-loader": "^6.7.3",
-    "postcss": "^8.4.21",
-    "postcss-loader": "^7.0.2",
-    "style-loader": "^3.3.1",
-    "tailwindcss": "^3.2.7",
-    "terser-webpack-plugin": "^5.3.6",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "autoprefixer": "^10.4.20",
+    "css-loader": "^7.1.2",
+    "postcss": "^8.4.49",
+    "postcss-loader": "^8.1.1",
+    "tailwindcss": "^3.4.16",
+    "terser-webpack-plugin": "^5.3.10",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0",
+    "style-loader": "^3.3.4"
   }
 }
